# cpp-boilerplate

./: CMakeLists.txt
src/: main.cpp
